# test-k_pol-usermode

./: Pipfile  README.rst  flashLinux.sh  flashZephyr.sh
Linux_VM/: ivshmem_driver.sh  l_vm_main.c
SecoSystem/boards/x86/acrn_ehl_seco/: CMakeLists_x86native.txt  Kconfig.board  Kconfig.defconfig  acrn_ehl_seco.dts  acrn_ehl_seco.yaml  acrn_ehl_seco_defconfig  acrn_ehl_seco_original.dts
SecoSystem/boards/x86/acrn_ehl_seco/doc/: index.rst
SecoSystem/dts/x86/: acrn_vm0_elkhart_lake.dtsi  acrn_vm1_elkhart_lake.dtsi
Zephyr_Project/: CMakeLists.txt  prj0.conf
Zephyr_Project/src/: main.c
sbl_os_generator_lokal/: ACPI_VM0.lz  ACPI_VM1.lz  ACPI_VM2.lz  ACRN.lz  ACRN.rgn  BOOT.hdr  BOOT.hdr.pub  BOOT.hdr.sig  BOOT.hdr.sig.hash  BOOT.hdr.sig.hash.tmp  BOOT.txt  CMDL.rgn  MOD0.lz  MOD2.rgn  MOD3.lz  MOD4.rgn  MOD5.rgn  MOD6.lz  MOD6.rgn  OS1_TestKey_Pub_RSA2048_priv.pem  _SG_.lz  acpi_vm0.lz  acpi_vm0.txt  acpi_vm1.lz  acpi_vm1.txt  acpi_vm2.lz  acpi_vm2.txt  acrn.32.lz  acrn.32.out  acrn.32alt2.out  alte_acrn.32.out  create_container_lokal.sh  extract_container.sh  hv_cmdline_bdf.lz  hv_cmdline_bdf.txt  kernel_sbl.sh  rtlinux.lz  rtlinux.txt  sbl_os  vm0.txt  (+9 more)
sbl_os_generator_lokal/slimbootloader/BootloaderCorePkg/Tools/key/: ConfigTestKey_Priv_RSA2048.pem  ConfigTestKey_Priv_RSA3072.pem  ContainerCompTestKey_Priv_RSA2048.pem  ContainerCompTestKey_Priv_RSA3072.pem  ContainerTestKey_Priv_RSA2048.pem  ContainerTestKey_Priv_RSA3072.pem  FirmwareUpdateTestKey_Priv_RSA2048.pem  FirmwareUpdateTestKey_Priv_RSA3072.pem  MasterTestKey_Priv_RSA2048.pem  OS1_TestKey_Pub_RSA2048.pem  (+4 more)
